helm/prod/ingress/ingress-rules-quorum.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: quorum-ingress-routes
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /prod/rpc(/|$)(.*)
        backend:
          serviceName: quorum-node-tx-1
          servicePort: 8545
      - path: /prod/ws(/|$)(.*)
        backend:
          serviceName: quorum-node-tx-1
          servicePort: 8546
      - path: /prod/graphql(/|$)(.*)
        backend:
          serviceName: quorum-node-tx-1
          servicePort: 8547
